--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zunaib/react-npm-package",
+  "name": "@zunaib.imtiaz/react-npm-package",
   "version": "1.0.0",
   "description": "A nice greeter",
   "main": "lib/index.js",
