--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zunaib.imtiaz/react-npm-package",
   "version": "1.1.0",
-  "description": "A nice greeter",
+  "description": "A Nice Test NPM Package",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
